--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -5,25 +5,25 @@ body {
 
 
 	/* Sand colors */
-	--c1: #f3e7d9;
+	/*--c1: #f3e7d9;
 	--c2: #ecdbc5;
 	--c3: #e6cfb2;
 	--c4: #e0c39f;
 	--c5: #dab78c;
 	--c6: #dab78c;
-
+	*/
 	/*--c1: #b1f9e8;*/
-	/*
+
 	--c1: #bad8d1;
 	--c2: #8ee1d3;
 	--c3: #6ac9be;
 	--c4: #47b0aa;
 	--c5: #239895;
-	--c6: #73b1a2;*/
+	--c6: #73b1a2;
 	/*--c6: #008080;*/
 
-	/*
-	--c1: #FDEEBE;
+
+	/*--c1: #FDEEBE;
 	--c2: #FDE6B6;
 	--c3: #FDDFAF;
 	--c4: #FCD7A7;
@@ -69,6 +69,9 @@ p {
   	text-justify: inter-word;
 }
 
+ul.simple > li:not(:last-child) {
+   margin-bottom: 5px;
+}
 
 /**
   Responsive video
@@ -133,6 +136,31 @@ code.literal {
 	display:inline-block;
 	cursor:pointer;
 	color:#7057C2;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.btn-heroku:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.btn-heroku:active {
+	position:relative;
+	top:1px;
+}
+
+.btn-heroku {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:var(--c5);
 	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
