--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -4,6 +4,23 @@
 body {
 
 
+	/* Pastel purple **/
+	--c1: #ece6ff;
+	--c2: #e9e2ff;
+	--c3: #e6deff;
+	--c4: #e3daff;
+	--c5: #e0d6ff;
+	--c6: #e0d6ff;
+
+
+	/* Pastel brown **/
+	/*--c6:#dfc7a7;
+	--c5:#dfc7a7;
+	--c4:#d7c0a2;
+	--c3:#cebaa0;
+	--c2:#cab69e;
+	--c1:#ccb79c;*/
+
 	/* Sand colors */
 	/*--c1: #f3e7d9;
 	--c2: #ecdbc5;
@@ -13,13 +30,13 @@ body {
 	--c6: #dab78c;
 	*/
 	/*--c1: #b1f9e8;*/
-
+	/*
 	--c1: #bad8d1;
 	--c2: #8ee1d3;
 	--c3: #6ac9be;
 	--c4: #47b0aa;
 	--c5: #239895;
-	--c6: #73b1a2;
+	--c6: #73b1a2;*/
 	/*--c6: #008080;*/
 
 
