--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -74,8 +74,18 @@ body {
 	background: var(--c5);
 	color: #fff;
 }
+
+
 a {
     color: var(--c6);
+}
+
+.wy-table-responsive table td {
+	white-space: normal !important;
+}
+
+.wy-table-responsive table td p {
+	text-align: left;
 }
 
 /**
@@ -89,6 +99,8 @@ p {
 ul.simple > li:not(:last-child) {
    margin-bottom: 5px;
 }
+
+
 
 /**
   Responsive video
